# DCMTK_GTest

./: CMakeLists.txt  README.md  Release.txt
data/: 327.dcm
src/: dicom_utils.cpp  dicom_utils.h  main.cpp
test/: CMakeLists.txt  test_dicom_utils.cpp
